[project]
name = "keras-dataaugmentationsimulator"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "tensorflow-cpu>=2.13.1",
    "Pillow>=10.0.1",
    "matplotlib>=3.7.3",
    "scipy>=1.10.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
    "isort>=5.12.0",
]

[tool.rye.scripts]
format = { cmd = "bash -xc 'black . && isort ." }

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
combine_as_imports = true
lines_after_imports = 2
src_paths = ["src", "tests"]
